alignment fixed

--- a/style.scss
+++ b/style.scss
@@ -86,8 +86,8 @@ header {
           &::after{
             content: "";
             position: absolute;
-            left:-18px;
-            top:4px;
+            left:-20px;
+            top:3px;
             width:20px;
             height: 20px;
             background: url("https://img.icons8.com/color/78/000000/vegetarian-food-symbol.png");
@@ -99,8 +99,8 @@ header {
           &::after{
             content: "";
             position: absolute;
-            left:-18px;
-            top:4px;
+            left:-20px;
+            top:3px;
             width:20px;
             height: 20px;
             background: url("https://img.icons8.com/color/78/000000/non-vegetarian-food-symbol.png");
